docs/kyverno-policies/tests/secrets-config/disallow-secret-env-in-plaintext-configmaps/bad-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: bad-cm
data:
  DB_PASSWORD: hunter2
