docs/kyverno-policies/tests/secrets-config/disallow-secret-env-in-plaintext-configmaps/good-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: good-cm
data:
  LOG_LEVEL: info
  FEATURE_FLAGS: "a,b,c"
